# try_drf

./: db.sqlite3  pyproject.toml
apps/authentication/: auth_tokenization.py  custom_permission.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/chapter1/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/chapter1/migrations/: 0001_initial.py  0002_alter_student_roll.py
apps/serialization_relation/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/serialization_relation/migrations/: 0001_initial.py  0002_alter_song_singer.py
apps/user/: admin.py  custom_authentication.py  custom_pagination.py  custom_throttling.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0002_student_by.py
apps/utils/timestamp/: apps.py  models.py
lesson1/: settings.py  urls.py
